Time: 36 ms (32.87%), Space: 59.3 MB (48.16%) - LeetHub